--- a/munus/requirements.txt
+++ b/munus/requirements.txt
@@ -1,6 +1,15 @@
 Django==4.2.7
-pandas==2.0.3
+numpy==2.2.2
+pandas==2.2.3
 openpyxl==3.1.2
+
+# Autenticação e Contas
+django-allauth==0.57.0
+django-crispy-forms==2.1
+
+# Configuração
+django-environ==0.11.2
+python-dotenv==1.0.0
 
 # Bibliotecas para desenvolvimento
 black==23.7.0
@@ -14,3 +23,4 @@ factory-boy==3.2.1
 
 # Frontend
 django-bootstrap5==23.3
+plotly==5.22.0
